updated README and related file

--- a/trailer.html
+++ b/trailer.html
@@ -41,6 +41,17 @@
     </div>
     <div class="container">
         
+<div class="movie-title" data-trailer-youtube-id="bT_UmBHMYzg" data-toggle="modal" data-target="#trailer">
+    <div class="row">
+    <div class="col-xs-3">
+        <img class="img-responsive" src="https://upload.wikimedia.org/wikipedia/en/6/64/Lifeinaday_2011.jpg" width="100%">
+    </div>
+    <div class="col-xs-9">
+        <h2> Life In A Day</h2>
+        <p>A movie consisted with clips submitted to Youtube, after questions "What do you love? What do you fear? What's in your pocket?" </p>
+    </div></div>
+</div>
+
 <div class="movie-title" data-trailer-youtube-id="X80kSDxF4rg" data-toggle="modal" data-target="#trailer">
     <div class="row">
     <div class="col-xs-3">
@@ -49,6 +60,39 @@
     <div class="col-xs-9">
         <h2>Helvetica</h2>
         <p>A documentary about typography and graphic design, centered on the typeface of the same name. It's the first part of Design Trilogy, directed by Gary Hustwit</p>
+    </div></div>
+</div>
+
+<div class="movie-title" data-trailer-youtube-id="JcMQmuvzPmI" data-toggle="modal" data-target="#trailer">
+    <div class="row">
+    <div class="col-xs-3">
+        <img class="img-responsive" src="https://upload.wikimedia.org/wikipedia/en/5/53/Happy_film.jpg" width="100%">
+    </div>
+    <div class="col-xs-9">
+        <h2>HAPPY</h2>
+        <p>It explores positive psychology, interviewing people over 14 countries.</p>
+    </div></div>
+</div>
+
+<div class="movie-title" data-trailer-youtube-id="GhaT78i1x2M" data-toggle="modal" data-target="#trailer">
+    <div class="row">
+    <div class="col-xs-3">
+        <img class="img-responsive" src="https://upload.wikimedia.org/wikipedia/en/f/fc/Indie_Game_The_Movie_poster.png" width="100%">
+    </div>
+    <div class="col-xs-9">
+        <h2>Indie Game</h2>
+        <p>A documentrary about days of indie game engineers, Edmund McMillen and Tommy Refenes.</p>
+    </div></div>
+</div>
+
+<div class="movie-title" data-trailer-youtube-id="oHJBdDSTbLw" data-toggle="modal" data-target="#trailer">
+    <div class="row">
+    <div class="col-xs-3">
+        <img class="img-responsive" src="https://upload.wikimedia.org/wikipedia/en/5/57/Exit-through-the-gift-shop.jpg" width="100%">
+    </div>
+    <div class="col-xs-9">
+        <h2>Exit Through the Gift Shop</h2>
+        <p>A documentary about street art.</p>
     </div></div>
 </div>
 
@@ -71,50 +115,6 @@
     <div class="col-xs-9">
         <h2>Urbanized</h2>
         <p>The third part of Design Trilogy, about architecture and urban design.</p>
-    </div></div>
-</div>
-
-<div class="movie-title" data-trailer-youtube-id="GhaT78i1x2M" data-toggle="modal" data-target="#trailer">
-    <div class="row">
-    <div class="col-xs-3">
-        <img class="img-responsive" src="https://upload.wikimedia.org/wikipedia/en/f/fc/Indie_Game_The_Movie_poster.png" width="100%">
-    </div>
-    <div class="col-xs-9">
-        <h2>Indie Game</h2>
-        <p>A documentrary about days of indie game engineers, Edmund McMillen and Tommy Refenes.</p>
-    </div></div>
-</div>
-
-<div class="movie-title" data-trailer-youtube-id="JcMQmuvzPmI" data-toggle="modal" data-target="#trailer">
-    <div class="row">
-    <div class="col-xs-3">
-        <img class="img-responsive" src="https://upload.wikimedia.org/wikipedia/en/5/53/Happy_film.jpg" width="100%">
-    </div>
-    <div class="col-xs-9">
-        <h2>HAPPY</h2>
-        <p>It explores positive psychology, interviewing people over 14 countries.</p>
-    </div></div>
-</div>
-
-<div class="movie-title" data-trailer-youtube-id="oHJBdDSTbLw" data-toggle="modal" data-target="#trailer">
-    <div class="row">
-    <div class="col-xs-3">
-        <img class="img-responsive" src="https://upload.wikimedia.org/wikipedia/en/5/57/Exit-through-the-gift-shop.jpg" width="100%">
-    </div>
-    <div class="col-xs-9">
-        <h2>Exit Through the Gift Shop</h2>
-        <p>A documentary about street art</p>
-    </div></div>
-</div>
-
-<div class="movie-title" data-trailer-youtube-id="bT_UmBHMYzg" data-toggle="modal" data-target="#trailer">
-    <div class="row">
-    <div class="col-xs-3">
-        <img class="img-responsive" src="https://upload.wikimedia.org/wikipedia/en/6/64/Lifeinaday_2011.jpg" width="100%">
-    </div>
-    <div class="col-xs-9">
-        <h2> Life In A Day</h2>
-        <p>A movie consisted with clips submitted to Youtube, after questions "What do you love? What do you fear? What's in your pocket?" </p>
     </div></div>
 </div>
 
