Added content First contact

--- a/trailer.html
+++ b/trailer.html
@@ -55,6 +55,20 @@ data-toggle="modal" data-target="#trailer">
     </div></div>
 </div>
 
+<div class="movie-title" data-trailer-youtube-id="kXId0he7Qyg"
+data-toggle="modal" data-target="#trailer">
+    <div class="row">
+    <div class="col-xs-3">
+        <img class="img-responsive" src="http://docuwiki.net/images/4/4e/First-Contact-Lost-Tribe-of-the-Amazon-Cover.jpg" width="100%">
+    </div>
+    <div class="col-xs-9">
+        <h2>Documentary National Geographic - First
+                             Contact Lost Tribes of the Amazon -
+                             Documentaries 2016</h2>
+        <p>A documentaly about isolated indigenous tribe</p>
+    </div></div>
+</div>
+
 <div class="movie-title" data-trailer-youtube-id="X80kSDxF4rg"
 data-toggle="modal" data-target="#trailer">
     <div class="row">
