Changed layout grid choice of main content to full width

--- a/trailer.html
+++ b/trailer.html
@@ -15,7 +15,7 @@ href="https://netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap-theme.min.cs
     <script
 src="https://netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
     <!-- js to play video -->
-    <script type="text/javascript" src="js/main.js"></script>
+    <script src="js/main.js"></script>
 </head>
 
   <body>
@@ -32,11 +32,9 @@ src="https://netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></scri
     <!-- Main Page Content -->
     <div id="header" class="container-fluid">
         <div class="container">
-            <div class="col-md-10 offset-md-1">
                 <h1>Inspirational movies</h1>
             <p>Click or tap, depend on your device, to watch trailers. <br/>
 I recommend to watch these whether you are a designer:)</p>
-            </div>
         </div>
     </div>
     <div class="container">
