chagned layout optimised for mobile

--- a/trailer.html
+++ b/trailer.html
@@ -37,7 +37,7 @@ src="https://netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></scri
 I recommend to watch these whether you are a designer:)</p>
         </div>
     </div>
-    <div class="container">
+    <div class="container-fluid">
         
 <div class="movie-title" data-trailer-youtube-id="bT_UmBHMYzg"
 data-toggle="modal" data-target="#trailer">
