--- a/trailer.html
+++ b/trailer.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet"
 	href="https://netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
-    <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+    <script src="js/jquery-1.10.1.min.js"></script>
     <script
 src="https://netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
     <!-- js to play video -->
