Added Black Mirror

--- a/trailer.html
+++ b/trailer.html
@@ -80,6 +80,19 @@ data-toggle="modal" data-target="#trailer">
     </div></div>
 </div>
 
+<div class="movie-title" data-trailer-youtube-id="jROLrhQkK78"
+data-toggle="modal" data-target="#trailer">
+    <div class="row">
+    <div class="col-xs-3">
+        <img class="img-responsive" src="https://upload.wikimedia.org/wikipedia/en/2/24/BlackMirrorTitleCard.jpg" width="100%">
+    </div>
+    <div class="col-xs-9">
+        <h2>Black Mirror</h2>
+        <p>British Sci-fi that let us imagine possibility
+                            of techology without well-thought.</p>
+    </div></div>
+</div>
+
 <div class="movie-title" data-trailer-youtube-id="JcMQmuvzPmI"
 data-toggle="modal" data-target="#trailer">
     <div class="row">
