rewrote all http to https

--- a/trailer.html
+++ b/trailer.html
@@ -58,7 +58,7 @@ data-toggle="modal" data-target="#trailer">
 data-toggle="modal" data-target="#trailer">
     <div class="row">
     <div class="col-xs-3">
-        <img class="img-responsive" src="http://docuwiki.net/images/4/4e/First-Contact-Lost-Tribe-of-the-Amazon-Cover.jpg" width="100%">
+        <img class="img-responsive" src="https://docuwiki.net/images/4/4e/First-Contact-Lost-Tribe-of-the-Amazon-Cover.jpg" width="100%">
     </div>
     <div class="col-xs-9">
         <h2>Documentary National Geographic - First
